<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.locket.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_avatar"
        android:name="com.example.locket.ui.avatar.AvatarFragment"
        android:label="@string/menu_personal"
        tools:layout="@layout/fragment_avatar" />
    <fragment
        android:id="@+id/nav_friend"
        android:name="com.example.locket.ui.friend.FriendsFragment"
        android:label="@string/menu_friend"
        tools:layout="@layout/fragment_friend" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.locket.ui.information.InformationFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_information" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.locket.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_signup"
        android:name="com.example.locket.ui.signup.SignupFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />
</navigation>